# gtrend-api

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  data.json
.cache/: haskell__.json  repo_index.json  rust__.json
src/: error.rs  helpers.rs  lib.rs  main.rs
src/routes/: developers.rs  gtrend.rs  languages.rs  mod.rs  repo.rs  spoken_languages.rs
