[package]
name = "gtrend-api"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
# xml-rs = "0.8"
serde_json = { version = "1.0", features = ["preserve_order"] }
rocket = "0.4.5" 
rocket_contrib = "0.4.5"
gtrend = { git = "https://gitlab.com/akane10/gtrend", branch = "master" }

