[package]
name = "gtrend-api"
version = "0.1.0"
authors = ["yapie <targaryen.akane@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.2", features = ["json"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
rocket = "0.4.7"
rocket_contrib = "0.4.7"
gtrend = { git = "https://gitlab.com/akane10/gtrend", branch = "master" }
tokio = "1.4.0"

